# datadesk

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  TODOS.md  error_log.txt  launch.bat  main.py  pyproject.toml  run.ps1  sweep.py  test_kill.bat  verify_benchmark.py
.github/workflows/: ci.yml
datadesk/: config.py  db.py  logging_config.py  models.py
datadesk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datadesk/ai/: post_classifier.py
datadesk/analysis/: __init__.py  congress_events.py  forward_screener.py  signal_audit.py  thesis.py  trump_events.py
datadesk/api/: app.py
datadesk/backtest/: costs.py  engine.py  metrics.py  phase_backtest.py  tax.py  tiers.py  vol_target.py  walkforward.py
datadesk/dashboard/: index.html  utils.js
datadesk/history/: migrate.py  store.py
datadesk/ingest/: backfill.py  ecb.py  fred.py  fundamentals.py  index_membership.py  massive.py  t212_client.py  tiingo.py  trump.py  validation.py  yahoo.py
datadesk/live/: market_calendar.py  oms.py  shadow.py  supply_chain_matrix.json  universe.py
datadesk/monte_carlo/: simulation.py
docs/: backtesting.md  ui_documentation.md
scripts/: check_quality.py  migrate_from_trading_bot.py
tests/: conftest.py  test_api.py  test_backfill.py  test_backtest_engine.py  test_classifier.py  test_engine.py  test_history.py  test_intraday_sim.py  test_liquidity.py  test_massive.py  test_metrics.py  test_oms.py  test_post_classifier.py  test_regime_bear.py  test_strategies.py  test_supply_chain.py  test_tiingo.py  test_trump.py  test_walkforward.py
(+35 files in other folders)
